2004-02-25  Jerry James  <james@xemacs.org>

	* general-slots.h: Make Qcritical, Qdelete, Qsearch, and Qsimple
	visible to modules (all are used by the LDAP module).
	* lisp.h: Make stuff in QUIT and QUITP visible to modules.
	* sysdep.h: Make speed_up_interrupts and slow_down_interrupts
	visible to modules (both are used by the LDAP module).
	* xemacs.def.in.in: Reflect all of the above additions to the
	module API.

2004-02-20  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecode.c (execute_optimized_program):
	Identify and mark more potential GC locations.
	Remove dead STATIC_GCPRO_STACK code and CPP constructs.
	Document GCPRO_STACK usage.

	* fns.c (Fnthcdr):
	(Fnth):
	(Felt):
	Propagate "This function can GC"s.
	(Fput):
	Propagate "This function cannot GC"s.

2004-02-17  Jerry James  <james@xemacs.org>

	* menubar-x.c (protected_menu_item_descriptor_to_widget_value_1):
	Move begin_gc_forbidden() here so it affects all callers.
	* menubar-x.c (menu_item_descriptor_to_widget_value): Call
	protected_menu_item_descriptor_to_widget_value_1 with
	call_trapping_problems.

2004-02-16  Jerry James  <james@xemacs.org>

	* gui-x.c (wv_set_evalable_slot): Check for eval within redisplay.

2004-02-14  Jerry James  <james@xemacs.org>

	* gui.c (gui_item_value): Remove in_redisplay parameter; check the
	in_display global variable instead.
	* gui.c (gui_item_active_p): Ditto.
	* gui.c (gui_item_selected_p): Ditto.
	* gui.c (gui_value_equal): Ditto.
	* gui.c (gui_item_equal_sans_selected): Ditto.
	* gui.c (gui_item_list_find_selected): Change calls to drop
	in_redisplay parameter.
	* gui.c (gui_item_included_p): Ditto.
	* gui.c (gui_item_equal): Ditto.
	* gui.h: Change prototypes accordingly.
	* dialog-msw.c (handle_question_dialog_box): Change calls to drop
	in_redisplay parameter.
	* glyphs-gtk.c (gtk_tab_control_redisplay): Ditto.
	* glyphs-msw.c (mswindows_redisplay_widget): Ditto.
	* glyphs-msw.c (mswindows_widget_instantiate): Ditto.